Stop pages overlapping with scroll bar at side

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -12,7 +12,6 @@
 @import "~nouislider/distribute/nouislider.min.css";
 
 html, body {
-  width: 100vw;
   overflow-y: visible;
   font-family: $font-family;
   color: $dark-grey;
